--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "quill": "^2.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
