--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "html-react-parser": "^5.2.3",
+    "quill": "^2.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
